--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@org/abijanlibrary": ["libs/abijanlibrary/src/index.ts"],
+      "@org/chalanalibrary": ["libs/chalanalibrary/src/index.ts"],
+      "@org/qwertt": ["libs/qwertt/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
